--- a/css/main.css
+++ b/css/main.css
@@ -1464,6 +1464,9 @@ p {
   -o-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
   transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+.after-hero__swiper-slide-wrap {
+  margin-right: 1px;
+}
 .after-hero__swiper-slide:hover {
   background-color: var(--green);
   border-color: var(--green);
@@ -1884,6 +1887,7 @@ p {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin-bottom: var(--gap-12);
+  margin-right: 1px;
 }
 .customers__slide-img img {
   -o-object-fit: contain;
